--- a/core-server/pom.xml
+++ b/core-server/pom.xml
@@ -154,9 +154,13 @@
                     <parallel>classes</parallel>
                     <perCoreThreadCount>true</perCoreThreadCount>
                     <threadCount>1</threadCount>
-                    <forkCount>0</forkCount>
+                    <forkCount>1</forkCount>
                     <reuseForks>true</reuseForks>
                     <systemPropertiesFile>${project.basedir}/etc/systemPropertiesFile</systemPropertiesFile>
+                    <argLine>
+                        --add-modules jakarta.xml.bind
+                        ${surefire.security.argline}
+                    </argLine>
                 </configuration>
             </plugin>
             <plugin>
