--- a/tests/e2e-client/pom.xml
+++ b/tests/e2e-client/pom.xml
@@ -176,7 +176,7 @@
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
+            <artifactId>hamcrest</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
