--- a/tests/e2e-server/pom.xml
+++ b/tests/e2e-server/pom.xml
@@ -183,7 +183,7 @@
 
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
+            <artifactId>hamcrest</artifactId>
             <scope>test</scope>
         </dependency>
 
