--- a/examples/extended-wadl-webapp/pom.xml
+++ b/examples/extended-wadl-webapp/pom.xml
@@ -142,51 +142,54 @@
         <plugins>
             <!-- Extended Wadl Config: this plugin generates the jaxb beans from xsd schemas -->
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>jaxb2-maven-plugin</artifactId>
-                <version>2.5.0</version>
-                <executions>
-                    <execution>
-                        <id>xjc</id>
-                        <goals>
-                            <goal>xjc</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <sources>
-                        <source>src/main/xsd</source>
-                    </sources>
-                    <packageName>org.glassfish.jersey.examples.extendedwadl</packageName>
-                    <extension>true</extension>
-                    <strict>false</strict>
-                    <verbose>true</verbose>
-                </configuration>
+                <artifactId>maven-antrun-plugin</artifactId>
                 <dependencies>
                     <dependency>
-                        <groupId>org.glassfish.jaxb</groupId>
-                        <artifactId>jaxb-xjc</artifactId>
-                        <version>${jaxb.ri.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>jakarta.activation</groupId>
-                        <artifactId>jakarta.activation-api</artifactId>
-                        <version>${jakarta.activation.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>jakarta.xml.bind</groupId>
-                        <artifactId>jakarta.xml.bind-api</artifactId>
-                        <version>${jakarta.jaxb.api.version}</version>
-                    </dependency>
-                    <dependency>
                         <groupId>com.sun.xml.bind</groupId>
-                        <artifactId>jaxb-impl</artifactId>
-                        <version>${jaxb.ri.version}</version>
+                        <artifactId>jaxb-xjc</artifactId>
+                        <version>4.0.0-M3</version>
                     </dependency>
-
                 </dependencies>
+                <executions>
+                    <execution>
+                        <id>xjc-gen-for-glassfish-acc</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <taskdef name="xjc" classname="com.sun.tools.xjc.XJCTask" classpathref="maven.plugin.classpath"/>
+                                <property name="dest" location="${project.build.directory}/generated-sources/xjc"/>
+                                <mkdir dir="${dest}"/>
+                                <xjc destdir="${dest}" fork="true"
+                                     schema="${project.basedir}/src/main/xsd"
+                                     package="org.glassfish.jersey.examples.extendedwadl">
+                                    <jvmarg value="-DenableExternalEntityProcessing=true"/>
+                                </xjc>
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
-
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>add-sources</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>${project.build.directory}/generated-sources/xjc</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <!-- Extended Wadl Config: javadoc plugin generates resourcedoc.xml during the compilation using doclet.
             Generated file is then used during runtime to attach javadoc information to wadl. -->
             <plugin>
