JPMS for 3 modules
Signed-off-by: Maxim Nesen <maxim.nesen@oracle.com>

--- a/ext/cdi/jersey-cdi-rs-inject/pom.xml
+++ b/ext/cdi/jersey-cdi-rs-inject/pom.xml
@@ -67,6 +67,9 @@
                 <configuration>
                     <show>package</show>
 		            <detectJavaApiLink>false</detectJavaApiLink>
+                    <detectLinks>false</detectLinks>
+                    <detectOfflineLinks>false</detectOfflineLinks>
+                    <source>8</source>
                 </configuration>
             </plugin>
         </plugins>
